months sticky scrollbar fix

--- a/src/assets/styles/base/_mixins.scss
+++ b/src/assets/styles/base/_mixins.scss
@@ -64,7 +64,7 @@
 
   &::-webkit-scrollbar-track,
   &::-webkit-scrollbar-thumb {
-    border-radius: 3px;
+    border-radius: 0;
     border-width: $padding;
     border-color: rgba(0, 0, 0, 0);
     border-style: solid;
